--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HADES.html
@@ -26,26 +26,30 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/HADES.jpeg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Hades es un juego de rol de acción roguelike desarrollado y publicado por Supergiant Games. El juego fue lanzado para Microsoft Windows, 
+                Xbox One y Series X el 17 de septiembre de 2020, que siguió a un lanzamiento de acceso anticipado en diciembre de 2018. Los jugadores controlan a Zagreus,
+                 el hijo de Hades, mientras intenta escapar del Inframundo para llegar al Monte Olimpo, en ocasiones con la ayuda de los obsequios que le otorgan los otros olímpicos. 
+                 Cada carrera desafía al jugador a través de una serie aleatoria de habitaciones pobladas de enemigos y recompensas, y el jugador usa una combinación de su ataque de arma principal,
+                  poder de carrera y habilidad mágica para derrotarlos mientras evita el daño para progresar lo más lejos posible. Si bien Zagreus a menudo morirá, el jugador puede usar el tesoro ganado para mejorar ciertos atributos o desbloquear nuevas armas y habilidades para mejorar las posibilidades de escapar en carreras posteriores.</p>
             </div></div>
 
         <br>
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° XBOX SERIES </p> 
+                <P>° XBOX ONE </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=91t0ha9x0AE" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+            <div class="col-md-8 col-sm-12">
+                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/hades/9p8dl6w0jbb8" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
