--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html
@@ -26,26 +26,30 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/HALO INFINITE.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Halo Infinite es un videojuego de disparos en primera persona siendo la secuela de Halo 5: Guardians y Halo Wars 2.
+                 Así como un reinicio espiritual de la saga. Fue revelado en la E3 de 2018 y originalmente sería lanzado al mercado junto con la Xbox Series X a finales de 2020 estando disponible también para Xbox One y Windows 10.
+                  Sin embargo, en Agosto de 2020 343 Industries anunció que el juego sería retrasado, siendo el 8 de Diciembre de 2021 la fecha de lanzamiento. 
+                  Ha pasado 1 año y 2 meses después de los acontecimientos de Halo 5: Guardians. La UNSC Infinity fue invadida y atacada por fuerzas de los Desterrados cerca de la Instalación 07 (Zeta Halo) con el Jefe Maestro despejando una zona de evacuación para ser atacado y derrotado por Atriox, 
+                  líder de los Desterrados, dejando al Jefe a la deriva en el espacio mientras que Fernando Esparza escapa en un Pelican.</p>
             </div></div>
 
         <br>
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° XBOX SERIES </p> 
+                <P>° XBOX ONE </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=rFh2i4AlPD4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+            <div class="col-md-8 col-sm-12">
+                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <p class="centrar" ><a href="https://www.xbox.com/es-cl/games/store/halo-infinite/9PP5G1F0C2B6" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
