--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS OF WAR 4.html
@@ -26,26 +26,28 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="" alt="sin imagen">
+            <img class="img" src="../img/XBOX/GEARS OF WAR 4.jpg" alt="sin imagen">
            </div>
            <div class="col-md-8 col-sm-12">
             <h2 class="centrar">Descripcion</h2><br>
-            <p> </p>
+            <p>Han pasado 25 años desde que el Arma Desmanteladora de Imulsión creada por Adam Jonathon Fenix fuera utilizada con el fin de erradicar la Pandemia Lambent,
+                 a las hordas de los Locust y terminara por evaporar toda la Imulsión presente en el planeta Sera. Tras este evento, la humanidad fue forzada a buscar nuevas formas de supervivencia después de tener que dejar de depender de la Imulsión, 
+                 el combustible fósil del planeta el cual prácticamente dejó de existir. Pero a consecuencia del uso del arma desmanteladora de Imulsión, el planeta entró en un estado de cataclismo climático en la forma de poderosos vendavales conocidos simplemente como "Llamaradas" obligando a la reformada Coalición de Gobiernos Ordenados a construir Asentamientos: ciudades amuralladas creadas para contener las fuertes corrientes de viento para proteger a los pocos humanos que quedaron tras la Guerra contra los Locust, declarando la aplicación de la Ley Marcial a todo aquel que abandone las ciudades amuralladas sin razón alguna. Esto provocó el descontento de algunos sobrevivientes quienes escogieron vivir fuera de las ciudades amuralladas siendo identificados como "Forasteros" los cuales viven fuera de la jurisdicción de la CGO, atacando las ciudades amuralladas para obtener recursos. </p>
             </div></div>
 
         <br>
         <div class="row">
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <H2>Plataformas</H2><br>
-                <p> </p>
-                <P> </P>
+                <p>° XBOX SERIES </p> 
+                <P>° XBOX ONE </P>
                 <br>
                 <h2>Trailer</h2><br>
-                <a href="" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
+                <a href="https://www.youtube.com/watch?v=XrfVfRV0zSg" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
-            <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
-                <p class="centrar" ><a href="" target="_blank">
+            <div class="col-md-8 col-sm-12">
+                <h2 class="centrar">Tiendas disponibles</h2><br><br>
+                <p class="centrar" ><a href="https://www.xbox.com/es-CL/games/store/gears-of-war-4/9nblggh4pbbm" target="_blank">
                     <img src="../img/XBOX/logoXbox.png" alt="Juego XBOX" class="logoY"></a></p>
             </div>
         </div>
